[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/Objects/Nature/Trees/TreeStumpObject.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/tree_sets/A/large_stumpA.png" type="Texture" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeStump:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TreeSprites/TreeStump:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 106 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "stump destroyed"
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeStump:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TreeSprites/TreeStump:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MovementCollisionBox/movementCollisionBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "stump hit right"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("TreeSprites/TreeStump:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.25, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 106 ), Vector2( -7, 106 ), Vector2( -2, 106 ), Vector2( -8, 106 ), Vector2( -3, 106 ), Vector2( -4, 106 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 15.7639
height = 10.6944

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 22.7083, 28.1439 )

[node name="TreeStumpObject" type="Node2D"]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 1 )

[node name="TreeSprites" type="Node2D" parent="."]
position = Vector2( 0, -20 )

[node name="TreeStump" type="Sprite" parent="TreeSprites"]
position = Vector2( -4, 106 )
texture = ExtResource( 2 )
offset = Vector2( 0, -120 )

[node name="StumpAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
"anims/stump destroyed" = SubResource( 3 )
"anims/stump hit right" = SubResource( 4 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
volume_db = -12.0

[node name="MovementCollisionBox" type="StaticBody2D" parent="."]
position = Vector2( 0, -31 )

[node name="movementCollisionBox" type="CollisionShape2D" parent="MovementCollisionBox"]
position = Vector2( -3.33333, 29.8889 )
rotation = -1.5708
shape = SubResource( 5 )

[node name="StumpHurtBox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -31 )
collision_layer = 8
collision_mask = 0

[node name="stumpHurtBox" type="CollisionShape2D" parent="StumpHurtBox"]
position = Vector2( -3.33333, 28.7778 )
rotation = -1.5708
shape = SubResource( 6 )

[node name="OccupiedTiles" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -31 )
collision_mask = 0

[node name="occupiedTiles" type="CollisionShape2D" parent="OccupiedTiles"]
position = Vector2( -3.33333, 28.7778 )
rotation = -1.5708
shape = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -9.53674e-07, -22.2222 )
scale = Vector2( 4.11111, 3.88889 )

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]

[connection signal="area_entered" from="StumpHurtBox" to="." method="_on_StumpHurtBox_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
